# mergify-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
mergify_hook/: __init__.py  validate_mergify.py
tests/: test_validate_mergify.py
